--- a/front/package.json
+++ b/front/package.json
@@ -14,7 +14,9 @@
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
     "nuxt": "^2.15.3",
-    "vuebar": "0.0.20"
+    "vue2-perfect-scrollbar": "^1.5.0",
+    "vuebar": "0.0.20",
+    "vuescroll": "^4.17.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
