--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -10,8 +10,9 @@
     ],
     "esModuleInterop": true,
     "allowJs": true,
+	"noImplicitAny": false,
     "sourceMap": true,
-    "strict": true,
+    "strict": false,
     "noEmit": true,
     "experimentalDecorators": true,
     "baseUrl": ".",
