--- a/back/package.json
+++ b/back/package.json
@@ -26,6 +26,7 @@
     "@nestjs/mongoose": "^7.2.4",
     "@nestjs/platform-express": "^7.6.15",
     "bcrypt": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
