--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
+    "js-cookie": "^2.2.1",
     "nuxt": "^2.15.3",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuebar": "0.0.20",
