--- a/back/package.json
+++ b/back/package.json
@@ -31,6 +31,7 @@
     "cookie-parser": "^1.4.5",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.7",
+    "multer": "^1.4.2",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
