--- a/front/package.json
+++ b/front/package.json
@@ -18,7 +18,8 @@
     "nuxt": "^2.15.3",
     "vue2-perfect-scrollbar": "^1.5.0",
     "vuebar": "0.0.20",
-    "vuescroll": "^4.17.3"
+    "vuescroll": "^4.17.3",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
